updated code to fix activescaffold. Also, set image as a text field to fix some truncation bugs

--- a/public/resources/acknowledge.css
+++ b/public/resources/acknowledge.css
@@ -35,6 +35,9 @@
 .contributors a:hover {
     text-decoration: none;
 }
+.acknowledge-block{
+  border-bottom:1px solid #ccc;
+}
 .acknowledge-block .contributor {
 /*    background: none repeat scroll 0 0 #F2F2F2;
     border-radius: 8px 8px 8px 8px;*/
