--- a/public/resources/main.css
+++ b/public/resources/main.css
@@ -135,7 +135,7 @@
       overflow: hidden; /* Vertically center images part 2: clear their floats. */
     }
     .featurette-image {
-      margin-top: 0px; /* Vertically center images part 3: negative margin up the image the same amount of the padding to center it. */
+      margin-top: 25px; /* Vertically center images part 3: negative margin up the image the same amount of the padding to center it. */
     }
 
     /* Give some space on the sides of the floated elements so text doesn't run right into it. */
